Fix question-details view styles (word-wrap, boldness, etc)

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -89,3 +89,30 @@ body {
     border-bottom: 0;
   }
 }
+
+.text {
+  word-wrap: break-word;
+}
+
+.answer-text {
+  font-size: 12pt;
+}
+
+.answer-author {
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+.question-caption {
+  font-weight: bold;
+  font-size: 14pt;
+}
+
+.question-text {
+  font-size: 12pt;
+}
+
+.question-author {
+  font-weight: bold;
+  font-size: 13pt;
+}
